plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'ch.qos.logback:logback-classic'
    testImplementation 'org.mockito:mockito-core:3.12.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
